---
source: packages/llvm/src/tests/functions/mod.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() personality void ()* @__typescript__personality {
entry:
  %y_ = alloca double, align 8
  %"0" = invoke double @foo_()
          to label %Block_0 unwind label %Block_1

Block_0:                                          ; preds = %entry
  store double %"0", double* %y_, align 8
  ret void

Block_1:                                          ; preds = %entry
  %"1" = landingpad i64
          cleanup
}

define void @__typescript__personality() {
entry:
  ret void
}

define double @foo_() {
main:
  ret double 1.000000e+00
}

